--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,70 @@
 <html>
 <head>
   <script src='vendor.js'></script>
-  <script type="text/javascript">
-    (function(e,t){var n=e.amplitude||{_q:[]};var r=t.createElement("script");r.type="text/javascript";
-    r.async=true;r.src="https://d24n15hnbwhuhn.cloudfront.net/libs/amplitude-2.12.1-min.gz.js";
-    r.onload=function(){e.amplitude.runQueuedFunctions()};var s=t.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(r,s);function i(e,t){e.prototype[t]=function(){this._q.push([t].concat(Array.prototype.slice.call(arguments,0)));
-    return this}}var o=function(){this._q=[];return this};var a=["add","append","clearAll","prepend","set","setOnce","unset"];
-    for(var u=0;u<a.length;u++){i(o,a[u])}n.Identify=o;var c=function(){this._q=[];return this;
-    };var p=["setProductId","setQuantity","setPrice","setRevenueType","setEventProperties"];
-    for(var l=0;l<p.length;l++){i(c,p[l])}n.Revenue=c;var d=["init","logEvent","logRevenue","setUserId","setUserProperties","setOptOut","setVersionName","setDomain","setDeviceId","setGlobalUserProperties","identify","clearUserProperties","setGroup","logRevenueV2","regenerateDeviceId"];
-    function v(e){function t(t){e[t]=function(){e._q.push([t].concat(Array.prototype.slice.call(arguments,0)));
-    }}for(var n=0;n<d.length;n++){t(d[n])}}v(n);e.amplitude=n})(window,document);
-
-    amplitude.init("4eb3b3a0d442e98e21622f721446633e");
-  </script>
 </head>
 <body>
-  <div id="world">
-    <div id="background"></div>
-    <div id="landscape"></div>
-    <div id="characters"></div>
-    <div id="foreground"></div>
+<div>
+  <div class="resume">
+
+    <div class='header'>Chris Doornink</div>
+    <div class='sub-header'>Web Applications Developer</div>
+    <div class='border-one'></div>
+    <div class='border-two'></div>
+    <div class='border-three'></div>
+
+    <div class='images'>
+      <div class="image item-one napster-main-image"></div>
+      <div class="image item-two recipes-main-image"></div>
+      <div class="image item-three activetime-main-image"></div>
+      <div class="image item-four bball-main-image"></div>
+    </div>
+
+  </div>
+  <div class="portfolio-items">
+    <div class='images'>
+      <div class="image item-one napster-main-image"></div>
+      <div class="image item-two recipes-main-image"></div>
+      <div class="image item-three activetime-main-image"></div>
+      <div class="image item-four bball-main-image"></div>
+    </div>
+    <div class="sub-images">
+      <div class='item-one'></div>
+      <div class='item-two'></div>
+      <div class='item-three'></div>
+      <div class='item-four'></div>
+    </div>
+    <div class="descriptions">
+      <div class='item-one description napster-description'>
+        <div class='line1'></div>
+        <div class="title">Napster</div>
+        <div class="sub-title">Music Streaming Platform</div>
+        <div class="description-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div class='item-two description recipes-description'>
+        <div class="title">Recipes</div>
+        <div class="sub-title">Family meal planning and shopping list</div>
+        <div class='line1'></div>
+        <div class="description-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+
+    </div>
   </div>
 
+
+</div>
 </body>
-  <link rel='stylesheet' href='ninja.css'>
-  <script src='ninja.js'></script>
+  <link rel='stylesheet' href='cd.css'>
+  <script src='cd.js'></script>
 </html>
